--- a/playbooks/users_info.yml
+++ b/playbooks/users_info.yml
@@ -2,10 +2,10 @@
 - name: Playbook users_info.yml
   hosts: all
 #  gather_facts: False
-  vars:
-    userlist: 
-      - root
-      - playbookvar
+#  vars:
+#    userlist: 
+#      - root
+#      - playbookvar
 
   tasks:
   - name: Speichere die gefundenen Benutzer in existing_users
@@ -22,3 +22,4 @@
     changed_when: false
     command: grep {{ item }} -q /etc/passwd
     when: userlist is defined
+    ignore_errors: yes
