--- a/inventories/test/hosts.ini
+++ b/inventories/test/hosts.ini
@@ -1,2 +1,9 @@
-[local]
-localhost
+[webservers:children]
+linux
+
+[linux]
+centos_box ansible_host=195.201.143.160
+
+[linux:vars]
+ansible_user=root
+
