--- a/assets/loesungen/windows/winbasic1.yml
+++ b/assets/loesungen/windows/winbasic1.yml
@@ -1,7 +1,8 @@
 ---
-- name: Playbook winbasic1.yml
+- name: Ping Windows
   hosts: windows
+  gather_facts: False
 
   tasks:
-  - name: Ping auf alle Linux Hosts
+  - name: Ping ausfuehren
     win_ping:
